@@ -6,6 +6,10 @@
 
 2015-04-22  Ethan A Merritt  <merritt@u.washington.edu>
 
+	* src/fit.c:  Fit code really cares about MAX_NUM_VAR, not MAXDATACOLS.
+
+2015-04-22  Ethan A Merritt  <merritt@u.washington.edu>
+
 	* src/datafile.c (f_stringcolumn f_columnhead df_set_key_title):
 	columnhead(FOO) could return strange results for FOO > 999 or
 	undefined or otherwise invalid.  Now we extend the range of valid
